# log4c

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/implement/: test.c
src/include/: log4c.h
